# repo-ranger-app/swagger.json
@@ -5,6 +5,46 @@
     "version": "1.0"
   },
   "paths": {
+    "/api/Dependencies": {
+      "get": {
+        "tags": [
+          "Dependencies"
+        ],
+        "parameters": [
+          {
+            "name": "Id",
+            "in": "query",
+            "style": "form",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/DependencyDetailVm"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DependencyDetailVm"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DependencyDetailVm"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Dependencies/Search": {
       "post": {
         "tags": [
@@ -256,6 +296,31 @@
   },
   "components": {
     "schemas": {
+      "DependencyDetailVm": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "version": {
+            "type": "string",
+            "nullable": true
+          },
+          "repositories": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/RepositoryDetailVm"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "DependencyVm": {
         "type": "object",
         "properties": {
@@ -359,6 +424,28 @@
         },
         "additionalProperties": false
       },
+      "ProjectDetailVm": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "version": {
+            "type": "string",
+            "nullable": true
+          },
+          "totalDependencies": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
       "ProjectVm": {
         "type": "object",
         "properties": {
@@ -411,6 +498,31 @@
               "$ref": "#/components/schemas/RepositoryVm"
             },
             "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "RepositoryDetailVm": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "projects": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ProjectDetailVm"
+            },
+            "nullable": true
+          },
+          "totalProjects": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
